force-app/main/default/objects/Voo__c/fields/MotivoCancelamento__c.field-meta.xml
<CustomField>
    <fullName>MotivoCancelamento__c</fullName>
    <inlineHelpText>Motivo de cancelamento do voo</inlineHelpText>
    <label>Motivo de cancelamento</label>
    <type>TextArea</type>
</CustomField>