force-app/main/default/objects/Voo__c/fields/NaoCalculaTranslado__c.field-meta.xml
<CustomField>
    <fullName>NaoCalculaTranslado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Não Calcula Translado</label>
    <type>Checkbox</type>
</CustomField>