force-app/main/default/objects/Voo__c/fields/NomeCliente__c.field-meta.xml
<CustomField>
    <fullName>NomeCliente__c</fullName>
    <formula>Cliente__r.Name</formula>
    <label>Nome do Cliente</label>
    <type>Text</type>
</CustomField>