force-app/main/default/objects/Voo__c/fields/NomeRastreamento__c.field-meta.xml
<CustomField>
    <fullName>NomeRastreamento__c</fullName>
    <description>Retorna o número do voo concatenado com 1 para rastreamento no skytrac</description>
    <formula>&apos;1&apos;+TEXT(VALUE(RIGHT(Name,Find(&quot;-&quot;, Name)-1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>O número do voo concatenado com 1 para rastreamento no skytrac</inlineHelpText>
    <label>Nome Rastreamento</label>
    <type>Text</type>
</CustomField>