force-app/main/default/objects/Voo__c/fields/NotificacaoAprovacao__c.field-meta.xml
<CustomField>
    <fullName>NotificacaoAprovacao__c</fullName>
    <formula>&quot;O voo &quot; &amp;  Name &amp; &quot; necessita de aprovação.&quot; &amp;
&quot; Link: &quot; &amp; LinkRegistro__c</formula>
    <label>Notificação Aprovação</label>
    <type>Text</type>
</CustomField>