force-app/main/default/objects/Voo__c/fields/NotificacaoLogIncompleto__c.field-meta.xml
<CustomField>
    <fullName>NotificacaoLogIncompleto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notificação Log Incompleto</label>
    <type>Checkbox</type>
</CustomField>