force-app/main/default/objects/Voo__c/fields/Observacoes__c.field-meta.xml
<CustomField>
    <fullName>Observacoes__c</fullName>
    <description>Observações com relação ao voo</description>
    <inlineHelpText>Observações com relação ao voo</inlineHelpText>
    <label>Observações</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>