force-app/main/default/objects/Voo__c/fields/ObservacoesBackup__c.field-meta.xml
<CustomField>
    <fullName>ObservacoesBackup__c</fullName>
    <description>Campo Backup do campo observações.</description>
    <inlineHelpText>Campo Backup do campo observações.</inlineHelpText>
    <label>Observacoes Backup</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>