force-app/main/default/objects/Voo__c/fields/OrdemCompraVoo__c.field-meta.xml
<CustomField>
    <fullName>OrdemCompraVoo__c</fullName>
    <description>Ordem de compra do voo</description>
    <inlineHelpText>Ordem de compra do voo enviada pelo cliente</inlineHelpText>
    <label>Ordem de Compra do Voo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>