force-app/main/default/objects/Voo__c/fields/OrdemExecucaoUltimoTrecho__c.field-meta.xml
<CustomField>
    <fullName>OrdemExecucaoUltimoTrecho__c</fullName>
    <label>Ordem de Execução do Último Trecho</label>
    <summarizedField>Trecho__c.OrdemExecucao__c</summarizedField>
    <summaryForeignKey>Trecho__c.Voo__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>