force-app/main/default/objects/Voo__c/fields/Origem_Primeiro_Trecho__c.field-meta.xml
<CustomField>
    <fullName>Origem_Primeiro_Trecho__c</fullName>
    <formula>MID( RotaAbreviada__c , 1, 4)</formula>
    <label>Origem Primeiro Trecho</label>
    <type>Text</type>
</CustomField>