force-app/main/default/objects/Voo__c/fields/OrigemLead__c.field-meta.xml
<CustomField>
    <fullName>OrigemLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Espelha campo origem do lead, que possui um local</description>
    <inlineHelpText>Espelha campo origem do lead, que possui um local</inlineHelpText>
    <label>Origem Lead</label>
    <referenceTo>Local__c</referenceTo>
    <relationshipLabel>Voos (Origem Lead)</relationshipLabel>
    <relationshipName>VoosOrigem</relationshipName>
    <type>Lookup</type>
</CustomField>