force-app/main/default/objects/Voo__c/fields/PAD__c.field-meta.xml
<CustomField>
    <fullName>PAD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifica que este é um voo regular associado a um PAD de um contrato de Logística integrada.</description>
    <inlineHelpText>Identifica que este é um voo regular associado a um PAD de um contrato de Logística integrada.</inlineHelpText>
    <label>PAD</label>
    <referenceTo>PAD__c</referenceTo>
    <relationshipLabel>Voos</relationshipLabel>
    <relationshipName>Voos</relationshipName>
    <type>Lookup</type>
</CustomField>