force-app/main/default/objects/Voo__c/fields/PassageirosTransportados__c.field-meta.xml
<CustomField>
    <fullName>PassageirosTransportados__c</fullName>
    <label>Passageiros Transportados</label>
    <summarizedField>Trecho__c.PassageirosEmbarcando__c</summarizedField>
    <summaryForeignKey>Trecho__c.Voo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>