force-app/main/default/objects/Voo__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>Reflete o Peso Máximo da Missão</description>
    <formula>Missao__r.PesoMaximo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Payload em Kg</inlineHelpText>
    <label>Payload</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>