force-app/main/default/objects/Voo__c/fields/PayloadFormula__c.field-meta.xml
<CustomField>
    <fullName>PayloadFormula__c</fullName>
    <formula>Missao__r.PesoMaximo__c + Payload__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payload</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>