force-app/main/default/objects/Voo__c/fields/Pernoite__c.field-meta.xml
<CustomField>
    <fullName>Pernoite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Há pernoite no voo?</description>
    <inlineHelpText>Há pernoite no voo?</inlineHelpText>
    <label>Pernoite</label>
    <type>Checkbox</type>
</CustomField>