force-app/main/default/objects/Voo__c/fields/PerspectivaReceitaCorte__c.field-meta.xml
<CustomField>
    <fullName>PerspectivaReceitaCorte__c</fullName>
    <description>Valor previsto a ser recebido pelo corte</description>
    <formula>ValorMinutoCorte__c *  TempoCorteCliente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Valor previsto a ser recebido pelo corte</inlineHelpText>
    <label>Perspectiva de receita de corte</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>