force-app/main/default/objects/Voo__c/fields/PerspectivaReceitaVoo__c.field-meta.xml
<CustomField>
    <fullName>PerspectivaReceitaVoo__c</fullName>
    <description>Perspectiva do valor do voo a ser recebido</description>
    <formula>TempoMissao__c * ValorMinutoVoado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Perspectiva do valor do voo a ser recebido</inlineHelpText>
    <label>Perspectiva de receita de voo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>