force-app/main/default/objects/Voo__c/fields/PesoCombustivel__c.field-meta.xml
<CustomField>
    <fullName>PesoCombustivel__c</fullName>
    <description>Peso do combustível embarcado</description>
    <inlineHelpText>Peso do combustível embarcado</inlineHelpText>
    <label>Peso Combustível</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>