force-app/main/default/objects/Voo__c/fields/Pouso__c.field-meta.xml
<CustomField>
    <fullName>Pouso__c</fullName>
    <description>Hora de pouso da aeronave</description>
    <inlineHelpText>Hora de pouso da aeronave</inlineHelpText>
    <label>Pouso Final</label>
    <type>DateTime</type>
</CustomField>