force-app/main/default/objects/Voo__c/fields/PousoTimeZoneEmpresa__c.field-meta.xml
<CustomField>
    <fullName>PousoTimeZoneEmpresa__c</fullName>
    <formula>LPAD(TEXT(DAY(DATEVALUE(DATETIMEVALUE(Pouso__c) + Cliente__r.TimeZone__c))), 2, &apos;0&apos;)
+ &quot;/&quot; +LPAD(TEXT(MONTH(DATEVALUE(DATETIMEVALUE(Pouso__c) + Cliente__r.TimeZone__c))), 2, &apos;0&apos;)
+ &quot;/&quot; +TEXT(YEAR(DATEVALUE(DATETIMEVALUE(Pouso__c) + Cliente__r.TimeZone__c)))
+ &quot; &quot; +LPAD(TEXT(HOUR(TIMEVALUE(DATETIMEVALUE(Pouso__c) + Cliente__r.TimeZone__c))), 2, &apos;0&apos;)
+ &quot;:&quot; +LPAD(TEXT(MINUTE(TIMEVALUE(DATETIMEVALUE(Pouso__c)+ Cliente__r.TimeZone__c))), 2, &apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pouso final no horário local do voo</label>
    <type>Text</type>
</CustomField>