force-app/main/default/objects/Voo__c/fields/Prefixo__c.field-meta.xml
<CustomField>
    <fullName>Prefixo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Prefixo da aeronave que realizará o voo</description>
    <inlineHelpText>Prefixo da aeronave que realizará o voo</inlineHelpText>
    <label>Prefixo</label>
    <referenceTo>Aeronave__c</referenceTo>
    <relationshipLabel>Voos</relationshipLabel>
    <relationshipName>Voos</relationshipName>
    <type>Lookup</type>
</CustomField>