force-app/main/default/objects/Voo__c/fields/PrefixoTexto__c.field-meta.xml
<CustomField>
    <fullName>PrefixoTexto__c</fullName>
    <description>Replica o Prefixo da Aeronave</description>
    <formula>Prefixo__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Replica o Prefixo da Aeronave</inlineHelpText>
    <label>Prefixo</label>
    <type>Text</type>
</CustomField>