force-app/main/default/objects/Voo__c/fields/PrimeiroTrecho__c.field-meta.xml
<CustomField>
    <fullName>PrimeiroTrecho__c</fullName>
    <description>Resumo de totalização com o número da ordem de execução do primeiro trecho do voo</description>
    <inlineHelpText>Resumo de totalização com o número da ordem de execução do primeiro trecho do voo</inlineHelpText>
    <label>Primeiro Trecho</label>
    <summarizedField>Trecho__c.OrdemExecucao__c</summarizedField>
    <summaryFilterItems>
        <field>Trecho__c.Tipo__c</field>
        <operation>notEqual</operation>
        <value>Translado</value>
    </summaryFilterItems>
    <summaryForeignKey>Trecho__c.Voo__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>