force-app/main/default/objects/Voo__c/fields/processandoSIG__c.field-meta.xml
<CustomField>
    <fullName>processandoSIG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>processando SIG</label>
    <type>Checkbox</type>
</CustomField>