force-app/main/default/objects/Voo__c/fields/ProprietarioVoo__c.field-meta.xml
<CustomField>
    <fullName>ProprietarioVoo__c</fullName>
    <formula>BLANKVALUE(Owner:User.FirstName + &apos; &apos;, &apos;&apos;) +
BLANKVALUE(Owner:User.LastName, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proprietário do Voo</label>
    <type>Text</type>
</CustomField>