force-app/main/default/objects/Voo__c/fields/Qtd_Passageiros__c.field-meta.xml
<CustomField>
    <fullName>Qtd_Passageiros__c</fullName>
    <description>Campo informativo para preenchimento da quantidade de passageiros de voos retroativos</description>
    <inlineHelpText>Campo criado para preenchimento da quantidade de passageiros de voos retroativos, afim de atualizar os gráficos e relatórios da empresa na implantação da base histórica</inlineHelpText>
    <label>Qtd Passageiros</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>