force-app/main/default/objects/Voo__c/fields/QtdTrechos__c.field-meta.xml
<CustomField>
    <fullName>QtdTrechos__c</fullName>
    <label>Quantidade de Trechos</label>
    <summaryForeignKey>Trecho__c.Voo__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>