force-app/main/default/objects/Voo__c/fields/QtdTrechosCoordenadasAlteradas__c.field-meta.xml
<CustomField>
    <fullName>QtdTrechosCoordenadasAlteradas__c</fullName>
    <label>Qtd Trechos Coordenadas Alteradas</label>
    <summaryFilterItems>
        <field>Trecho__c.CoordenadasAlteradas__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Trecho__c.Voo__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>