force-app/main/default/objects/Voo__c/fields/QtdTrechosFinalizados__c.field-meta.xml
<CustomField>
    <fullName>QtdTrechosFinalizados__c</fullName>
    <label>Qtd Trechos Finalizados</label>
    <summaryFilterItems>
        <field>Trecho__c.Status__c</field>
        <operation>equals</operation>
        <value>Finalizado</value>
    </summaryFilterItems>
    <summaryForeignKey>Trecho__c.Voo__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>