force-app/main/default/objects/Voo__c/fields/QtdTrechosOrigemOffshore__c.field-meta.xml
<CustomField>
    <fullName>QtdTrechosOrigemOffshore__c</fullName>
    <description>Quantidade de trechos no voo que possuem a origem OFFSHORE</description>
    <inlineHelpText>Quantidade de trechos no voo que possuem a origem OFFSHORE</inlineHelpText>
    <label>Qtd Trechos Origem Offshore</label>
    <summaryFilterItems>
        <field>Trecho__c.Offshore__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Trecho__c.Voo__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>