force-app/main/default/objects/Voo__c/fields/RastreamentoVoo__c.field-meta.xml
<CustomField>
    <fullName>RastreamentoVoo__c</fullName>
    <description>Campo que verifica se o Skytrac deve ser verificado</description>
    <formula>AND(
				NOW() &gt;= DataInicioRastreamentoVoo__c,
				NOW() &lt;= DataFimRastreamentoVoo__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Campo que verifica se o Skytrac deve ser verificado</inlineHelpText>
    <label>Rastreamento Voo</label>
    <type>Checkbox</type>
</CustomField>