force-app/main/default/objects/Voo__c/fields/ReceitaCorte__c.field-meta.xml
<CustomField>
    <fullName>ReceitaCorte__c</fullName>
    <description>Valor do corte executado</description>
    <formula>TempoCorte__c *  ValorMinutoCorte__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Valor do corte executado</inlineHelpText>
    <label>Receita do Corte</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>