force-app/main/default/objects/Voo__c/fields/ReceitaVoo__c.field-meta.xml
<CustomField>
    <fullName>ReceitaVoo__c</fullName>
    <description>Total a ser cobrado pelo voo.</description>
    <formula>TempoVoado__c  * ValorMinutoVoado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total a ser cobrado pelo voo.</inlineHelpText>
    <label>Receita do Voo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>