force-app/main/default/objects/Voo__c/fields/RelatorioVoo__c.field-meta.xml
<CustomField>
    <fullName>RelatorioVoo__c</fullName>
    <description>Coordenação deve inserir número do relatório de voo</description>
    <externalId>true</externalId>
    <inlineHelpText>Número do relatório de voo</inlineHelpText>
    <label>Relatório de Voo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>