force-app/main/default/objects/Voo__c/fields/RelatorioVooAnexo__c.field-meta.xml
<CustomField>
    <fullName>RelatorioVooAnexo__c</fullName>
    <label>Relatório de voo - Anexo</label>
    <type>Url</type>
</CustomField>