force-app/main/default/objects/Voo__c/fields/RepetirAte__c.field-meta.xml
<CustomField>
    <fullName>RepetirAte__c</fullName>
    <label>Repetir Até</label>
    <type>Date</type>
</CustomField>