force-app/main/default/objects/Voo__c/fields/RepetirDe__c.field-meta.xml
<CustomField>
    <fullName>RepetirDe__c</fullName>
    <label>Repetir De</label>
    <type>Date</type>
</CustomField>