force-app/main/default/objects/Voo__c/fields/ReservadoNoturno__c.field-meta.xml
<CustomField>
    <fullName>ReservadoNoturno__c</fullName>
    <description>Verdade se a reserva for feita após às 18 e antes das 6h</description>
    <formula>OR(
HOUR( TIMEVALUE( HorarioVooReservado2__c ) ) &gt;= $Setup.ConfiguracaoTempo__c.HoraInicioAprovacaoNoturna__c,
HOUR( TIMEVALUE( HorarioVooReservado2__c ) ) &lt; $Setup.ConfiguracaoTempo__c.HoraFimAprovacaoNoturna__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ReservadoNoturno</label>
    <type>Checkbox</type>
</CustomField>