force-app/main/default/objects/Voo__c/fields/ResetarPreReserva__c.field-meta.xml
<CustomField>
    <fullName>ResetarPreReserva__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo auxiliar para cancelar o agendamento de exclusão de voo do process builder</description>
    <inlineHelpText>Campo auxiliar para cancelar o agendamento de exclusão de voo do process builder</inlineHelpText>
    <label>Resetar Pré-reserva</label>
    <type>Checkbox</type>
</CustomField>