force-app/main/default/objects/Voo__c/fields/Resumo__c.field-meta.xml
<CustomField>
    <fullName>Resumo__c</fullName>
    <description>Linha resumida para apresentar no flow</description>
    <formula>Name  &amp; &apos; - &apos; &amp; 
TEXT( DATEVALUE( DataVoo__c ) ) &amp; &apos; - &apos; &amp;  
Prefixo__r.Name  &amp; &apos; - &apos; &amp;  
RotaAbreviada__c  &amp; &apos; - &apos; &amp; 
IF(TrechosCorte__c &gt; 1, &apos;Com corte&apos;, &apos;Sem corte&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resumo</label>
    <type>Text</type>
</CustomField>