force-app/main/default/objects/Voo__c/fields/RetornoABase__c.field-meta.xml
<CustomField>
    <fullName>RetornoABase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retorno a base</label>
    <type>Checkbox</type>
</CustomField>