force-app/main/default/objects/Voo__c/fields/RetornoLead__c.field-meta.xml
<CustomField>
    <fullName>RetornoLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Espelha campo destino do lead, que possui um local</description>
    <inlineHelpText>Espelha campo destino do lead, que possui um local</inlineHelpText>
    <label>Retorno Lead</label>
    <referenceTo>Local__c</referenceTo>
    <relationshipLabel>Voos (Retorno Lead)</relationshipLabel>
    <relationshipName>VoosRetorno</relationshipName>
    <type>Lookup</type>
</CustomField>