force-app/main/default/objects/Voo__c/fields/Retroativo__c.field-meta.xml
<CustomField>
    <fullName>Retroativo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se o voo é retroativo, utilizado a princípio na carga de voos retroativos via excel</description>
    <inlineHelpText>Voo criado após a execução</inlineHelpText>
    <label>Retroativo</label>
    <type>Checkbox</type>
</CustomField>