force-app/main/default/objects/Voo__c/fields/RevalidarAprovacoes__c.field-meta.xml
<CustomField>
    <fullName>RevalidarAprovacoes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Caso marcado, um voo a partir do status confirmado retorna a reservado e as aprovações devem ser refeitas.</description>
    <inlineHelpText>Marque para refazer as aprovações de coordenação e operações.</inlineHelpText>
    <label>Revalidar Aprovações</label>
    <type>Checkbox</type>
</CustomField>