force-app/main/default/objects/Voo__c/fields/Rota__c.field-meta.xml
<CustomField>
    <fullName>Rota__c</fullName>
    <description>Rota de execução do voo. Local 1 &gt; Local 2 &gt; Local 3</description>
    <inlineHelpText>Rota de execução do voo. Local 1 &gt; Local 2 &gt; Local 3</inlineHelpText>
    <label>Rota (Extenso)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>