force-app/main/default/objects/Voo__c/fields/RotaAbreviada__c.field-meta.xml
<CustomField>
    <fullName>RotaAbreviada__c</fullName>
    <description>Rota do Voo com locais abreviados</description>
    <inlineHelpText>Rota do Voo com locais abreviados</inlineHelpText>
    <label>Rota</label>
    <length>255</length>
    <type>Text</type>
</CustomField>