force-app/main/default/objects/Voo__c/fields/RotaCompleta__c.field-meta.xml
<CustomField>
    <fullName>RotaCompleta__c</fullName>
    <description>Rota de execução do voo. Local 1 &gt; Local 2 &gt; Local 3</description>
    <inlineHelpText>Rota de execução do voo. Local 1 &gt; Local 2 &gt; Local 3</inlineHelpText>
    <label>Rota (Completa)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>