force-app/main/default/objects/Voo__c/fields/SAR2__c.field-meta.xml
<CustomField>
    <fullName>SAR2__c</fullName>
    <label>Tipo de treinamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAR</fullName>
            </value>
            <value>
                <fullName>NDC</fullName>
            </value>
            <value>
                <fullName>FAMILIARIZAÇÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>