force-app/main/default/objects/Voo__c/fields/SetorResponsavel__c.field-meta.xml
<CustomField>
    <fullName>SetorResponsavel__c</fullName>
    <label>Setor Responsável</label>
    <length>255</length>
    <type>Text</type>
</CustomField>