force-app/main/default/objects/Voo__c/fields/Skytrac__c.field-meta.xml
<CustomField>
    <fullName>Skytrac__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para indicar que o Skytrac enviou msg informando início do voo</description>
    <inlineHelpText>Campo para indicar que o Skytrac enviou msg informando início do voo</inlineHelpText>
    <label>Skytrac</label>
    <type>Checkbox</type>
</CustomField>