force-app/main/default/objects/Voo__c/fields/SkytracRetrocedeu__c.field-meta.xml
<CustomField>
    <fullName>SkytracRetrocedeu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skytrac Retrocedeu</label>
    <type>Checkbox</type>
</CustomField>