force-app/main/default/objects/Voo__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Define em que momento o voo se encontra</description>
    <inlineHelpText>Define em que momento o voo se encontra</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Rascunho</fullName>
                <default>true</default>
                <label>Rascunho</label>
            </value>
            <value>
                <fullName>Pré-reservado</fullName>
            </value>
            <value>
                <fullName>Reservado</fullName>
            </value>
            <value>
                <fullName>Confirmado</fullName>
            </value>
            <value>
                <fullName>Rota</fullName>
                <label>Em Rota</label>
            </value>
            <value>
                <fullName>LogPendente</fullName>
                <label>Concluindo o Voo</label>
            </value>
            <value>
                <fullName>Executado</fullName>
            </value>
            <value>
                <fullName>Em Faturamento</fullName>
                <isActive>false</isActive>
                <label>Em Faturamento</label>
            </value>
            <value>
                <fullName>Faturado</fullName>
                <isActive>false</isActive>
                <label>Faturado</label>
            </value>
            <value>
                <fullName>Pronto pra Voar</fullName>
                <isActive>false</isActive>
                <label>Pronto pra Voar</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>