force-app/main/default/objects/Voo__c/fields/StatusPermiteVoltarRascunho__c.field-meta.xml
<CustomField>
    <fullName>StatusPermiteVoltarRascunho__c</fullName>
    <description>Verdadeiro se possui um Status que pode voltar diretamente para rascunho.</description>
    <formula>OR(
    ISPICKVAL(Status__c, &apos;Pré-reservado&apos;),
				ISPICKVAL(Status__c, &apos;Rascunho&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Verdadeiro se possui um Status que pode voltar diretamente para rascunho.</inlineHelpText>
    <label>Status Permite Voltar Rascunho</label>
    <type>Checkbox</type>
</CustomField>