force-app/main/default/objects/Voo__c/fields/StatusRascunho__c.field-meta.xml
<CustomField>
    <fullName>StatusRascunho__c</fullName>
    <inlineHelpText>Data e hora que o status foi alterado para rascunho</inlineHelpText>
    <label>Status Rascunho</label>
    <type>DateTime</type>
</CustomField>