force-app/main/default/objects/Voo__c/fields/StatusSig__c.field-meta.xml
<CustomField>
    <fullName>StatusSig__c</fullName>
    <defaultValue>1</defaultValue>
    <description>0 = Cancelado
1 = Rascunho
2 = Finalizado
3 = Aprovado - Comandante
4 = Aprovado - Coordenação
5 = Aprovado - Comercial</description>
    <label>StatusSig</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>