force-app/main/default/objects/Voo__c/fields/TemCarga__c.field-meta.xml
<CustomField>
    <fullName>TemCarga__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Há necessidade de transporte de carga em algum trecho do voo?</description>
    <inlineHelpText>Há necessidade de transporte de carga em algum trecho do voo?</inlineHelpText>
    <label>Tem carga</label>
    <type>Checkbox</type>
</CustomField>