force-app/main/default/objects/Voo__c/fields/TemCorte__c.field-meta.xml
<CustomField>
    <fullName>TemCorte__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Informa se o voo possui corte de motor em algum trecho.</description>
    <inlineHelpText>Possui corte em algum trecho?</inlineHelpText>
    <label>Tem Corte</label>
    <type>Checkbox</type>
</CustomField>