force-app/main/default/objects/Voo__c/fields/TempoCortadoTexto__c.field-meta.xml
<CustomField>
    <fullName>TempoCortadoTexto__c</fullName>
    <formula>IF(
				NOT(ISBLANK(TempoCorte__c)),
				IF(
								CEILING(MOD(TempoCorte__c ,60)) = 0 ||
								CEILING(MOD(TempoCorte__c ,60)) = 60,
								IF(
												CEILING(MOD(TempoCorte__c ,60)) = 0,
												TEXT(FLOOR(TempoCorte__c / 60))&amp;&apos;h&apos;,
												TEXT(FLOOR(TempoCorte__c / 60)+1)&amp;&apos;h&apos;
								),
								TEXT(FLOOR(TempoCorte__c / 60))&amp;&apos;h &apos;&amp;
								TEXT(CEILING(MOD(TempoCorte__c ,60)))&amp;&apos;min&apos;
				)
				,
				&apos;0h 0min&apos;
)</formula>
    <label>Tempo Cortado</label>
    <type>Text</type>
</CustomField>