force-app/main/default/objects/Voo__c/fields/TempoCorte__c.field-meta.xml
<CustomField>
    <fullName>TempoCorte__c</fullName>
    <description>Tempo total em corte</description>
    <inlineHelpText>Tempo total em que a aeronave esteve com o motor em corte durante o voo</inlineHelpText>
    <label>Corte Executado</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>