force-app/main/default/objects/Voo__c/fields/TempoCorteCliente__c.field-meta.xml
<CustomField>
    <fullName>TempoCorteCliente__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Tempo de corte solicitado pelo cliente na tela de solicitação de voos</description>
    <inlineHelpText>Tempo total de corte que a aeronave fará durante o Voo. Solicitado pelo cliente na tela de solicitar Voo</inlineHelpText>
    <label>Corte Solicitado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>