force-app/main/default/objects/Voo__c/fields/TempoMissao__c.field-meta.xml
<CustomField>
    <fullName>TempoMissao__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Tempo de missão do voo</description>
    <inlineHelpText>Tempo de missão do voo</inlineHelpText>
    <label>Tempo de Missão</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>