force-app/main/default/objects/Voo__c/fields/TempoMissaoFormula__c.field-meta.xml
<CustomField>
    <fullName>TempoMissaoFormula__c</fullName>
    <formula>LPAD(TEXT(TRUNC(TempoMissao__c / 60,0)), 2 , &quot;0&quot;) + &quot;:&quot; +  LPAD(TEXT(TRUNC(MOD(TempoMissao__c,60),0)), 2 , &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo Missão</label>
    <type>Text</type>
</CustomField>