force-app/main/default/objects/Voo__c/fields/TempoMissaoTexto__c.field-meta.xml
<CustomField>
    <fullName>TempoMissaoTexto__c</fullName>
    <description>Extenso do tempo da missão</description>
    <formula>IF(
				CEILING(MOD(TempoMissao__c ,60)) = 0 ||
				CEILING(MOD(TempoMissao__c ,60)) = 60,
				IF(
				    CEILING(MOD(TempoMissao__c ,60)) = 0,
			     TEXT(FLOOR(TempoMissao__c / 60))&amp;&apos;h&apos;,
				    TEXT(FLOOR(TempoMissao__c / 60)+1)&amp;&apos;h&apos;
				),
				TEXT(FLOOR(TempoMissao__c / 60))&amp;&apos;h &apos;&amp;
    TEXT(CEILING(MOD(TempoMissao__c ,60)))&amp;&apos;min&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo Missão</label>
    <type>Text</type>
</CustomField>