force-app/main/default/objects/Voo__c/fields/TempoNavegacao__c.field-meta.xml
<CustomField>
    <fullName>TempoNavegacao__c</fullName>
    <label>Tempo de Navegação</label>
    <summarizedField>Trecho__c.TempoNavegacao__c</summarizedField>
    <summaryForeignKey>Trecho__c.Voo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>