force-app/main/default/objects/Voo__c/fields/TempoNavegacaoTexto__c.field-meta.xml
<CustomField>
    <fullName>TempoNavegacaoTexto__c</fullName>
    <formula>IF(
NOT(ISBLANK(TempoNavegacao__c)),
IF(
CEILING(MOD(TempoNavegacao__c ,60)) = 0 ||
CEILING(MOD(TempoNavegacao__c ,60)) = 60,
IF(
CEILING(MOD(TempoNavegacao__c ,60)) = 0,
TEXT(FLOOR(TempoNavegacao__c / 60))&amp;&apos;h&apos;,
TEXT(FLOOR(TempoNavegacao__c / 60)+1)&amp;&apos;h&apos;
),
TEXT(FLOOR(TempoNavegacao__c / 60))&amp;&apos;h &apos;&amp;
TEXT(CEILING(MOD(TempoNavegacao__c ,60)))&amp;&apos;min&apos;
)
,
&apos;0h 0min&apos;
)</formula>
    <label>Tempo de Navegação</label>
    <type>Text</type>
</CustomField>