force-app/main/default/objects/Voo__c/fields/TempoVoado__c.field-meta.xml
<CustomField>
    <fullName>TempoVoado__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Tempo total voado</description>
    <inlineHelpText>Tempo total voado</inlineHelpText>
    <label>Tempo Voado</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>