force-app/main/default/objects/Voo__c/fields/TempoVoadoFaturamento__c.field-meta.xml
<CustomField>
    <fullName>TempoVoadoFaturamento__c</fullName>
    <label>Tempo Voado Faturamento</label>
    <summarizedField>Trecho__c.TempoVoadoFaturamento__c</summarizedField>
    <summaryForeignKey>Trecho__c.Voo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>