force-app/main/default/objects/Voo__c/fields/TempoVoadoFaturamentoTexto__c.field-meta.xml
<CustomField>
    <fullName>TempoVoadoFaturamentoTexto__c</fullName>
    <formula>IF(
    NOT(ISBLANK(TempoVoadoFaturamento__c)),
    IF(
        CEILING(MOD(TempoVoadoFaturamento__c ,60)) = 0 || CEILING(MOD(TempoVoadoFaturamento__c ,60)) = 60,
        IF(
            CEILING(MOD(TempoVoadoFaturamento__c ,60)) = 0,
            TEXT(FLOOR(TempoVoadoFaturamento__c / 60))&amp;&apos;h&apos;,
            TEXT(FLOOR(TempoVoadoFaturamento__c / 60)+1)&amp;&apos;h&apos;
        ),
        TEXT(FLOOR(TempoVoadoFaturamento__c / 60))&amp;&apos;h &apos;&amp; TEXT(CEILING(MOD(TempoVoadoFaturamento__c ,60)))&amp;&apos;min&apos;
    ),
    &apos;0h 0min&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo Voado Faturamento</label>
    <type>Text</type>
</CustomField>