force-app/main/default/objects/Voo__c/fields/TempoVoadoTexto__c.field-meta.xml
<CustomField>
    <fullName>TempoVoadoTexto__c</fullName>
    <formula>IF(
				NOT(ISBLANK(TempoVoado__c)),
				IF(
								CEILING(MOD(TempoVoado__c ,60)) = 0 ||
								CEILING(MOD(TempoVoado__c ,60)) = 60,
								IF(
												CEILING(MOD(TempoVoado__c ,60)) = 0,
												TEXT(FLOOR(TempoVoado__c / 60))&amp;&apos;h&apos;,
												TEXT(FLOOR(TempoVoado__c / 60)+1)&amp;&apos;h&apos;
								),
								TEXT(FLOOR(TempoVoado__c / 60))&amp;&apos;h &apos;&amp;
								TEXT(CEILING(MOD(TempoVoado__c ,60)))&amp;&apos;min&apos;
				)
				,
				&apos;0h 0min&apos;
)</formula>
    <label>Tempo Voado</label>
    <type>Text</type>
</CustomField>